Fix white space on Mobile

--- a/src/component/home.css
+++ b/src/component/home.css
@@ -1,7 +1,9 @@
 .homepage {
     background: #1B1B1F;
-    height: 100vh
+    height:1500px
 }
+
+
 
 h3.title {
     padding-top: 10px;
@@ -73,4 +75,6 @@ p.slidebar-option {
     color: #9499FF;
     font-weight: bold;
 }
+
+
 
